openshift/service-and-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: openshift-operations-portal-service
  labels:
    app: openshift-operations-portal
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: openshift-operations-portal
    component: core-service
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshift-operations-portal-route
  labels:
    app: openshift-operations-portal
spec:
  to:
    kind: Service
    name: openshift-operations-portal-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
